included maps in allretiros

--- a/public/sass/_maps.sass
+++ b/public/sass/_maps.sass
@@ -1,4 +1,11 @@
-
+#maps
+  height: 550px
+  width: 50%
+  border: 1px solid #f8af00
+  box-shadow: 1px, 1px, 1px
+  opacity: 0.8
+  float: right
+  
 
 
 #map
