--- a/views/layout.pug
+++ b/views/layout.pug
@@ -75,6 +75,9 @@ include includes/footer.pug
   script(src='/js/tcal.js')
   script(src='/js/favorites.js')
   script(src='/js/main.js')
+  script(src='/js/imageLoad.js')
+  script(src='/js/allMaps.js')
+  script(src='/js/insert-title.js')
  
 
 
