--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1196,6 +1196,14 @@ a.social-icon {
     cursor: inherit;
     display: block; }
 
+#maps {
+  height: 550px;
+  width: 50%;
+  border: 1px solid #f8af00;
+  box-shadow: 1px, 1px, 1px;
+  opacity: 0.8;
+  float: right; }
+
 #map {
   height: 250px;
   width: 100%;
