--- a/views/add-event.pug
+++ b/views/add-event.pug
@@ -22,14 +22,12 @@ block content
   .container.well
       form.edit-retiro(action= action ? action : '/retiros', method= method ? method : 'POST')
         .container
-          //.col-sm-8
-            div.text-left
-              | Imagen
-              br
-        //.row
+          .col-sm-8        
+        .row
             br
             fieldset.form-group.col-sm-2
-                      .img-picker
+              label Imagen   
+              .img-picker
             //- fieldset.form-group.col-sm-2
             //-           .img-picker
             //- fieldset.form-group.col-sm-2
@@ -171,6 +169,7 @@ block content
   script(src='/js/main.js')       
   //-script(src='/js/imageLoad.js')
   script(src='/js/maps.js')
+  script(src='/js/imageLoad.js')
   script(src = 'https://maps.googleapis.com/maps/api/js?key=AIzaSyD2CtWqsM0k23XnQMwJQXASOmNEkE8IAgM&callback=initMap')
 
 
