insert maps in search events & tantra

--- a/public/sass/_carrussel.sass
+++ b/public/sass/_carrussel.sass
@@ -277,3 +277,16 @@ div.form-group.label-taller
 .copy
   text-decoration: none !important
   color: white
+
+@media screen and (max-width:600px)
+img   
+  max-width: 290px
+.navbar
+  max-height: 120px
+   
+#container  
+  width: auto  
+header h1 a  
+  width: auto  
+  
+  
