--- a/public/css/style.css
+++ b/public/css/style.css
@@ -268,6 +268,18 @@ div.form-group.label-taller {
   text-decoration: none !important;
   color: white; }
 
+img {
+  max-width: 290px; }
+
+.navbar {
+  max-height: 120px; }
+
+#container {
+  width: auto; }
+
+header h1 a {
+  width: auto; }
+
 .navbar-count {
   margin-top: -30px;
   height: 60px; }
