--- a/views/home.pug
+++ b/views/home.pug
@@ -4,10 +4,10 @@ block content
     .welcome.text-center.container
       p#welcome-top
         | Bienvenido a Tu portal de Anuncios: 
-        strong Y
-        | oga & 
-        strong A
-        | yurveda
+        strong T
+        | rinidad de la 
+        strong V
+        | ida
       .hr-line
     .container
       #myCarousel.carousel.slide(data-ride='carousel')
@@ -25,7 +25,8 @@ block content
                     option(value='1') Categoria...
                     option(value='2') Yoga
                     option(value='3') Ayurveda
-                    option(value='4') Yoga y Ayurveda
+                    option(value='4') Tantra
+                    option(value='5') Trinidad
                   .col-md-1
                       span.input-group-btn
                         button#search.btn.btn-warning.search(type='button').i.glyphicon.glyphicon-search
@@ -42,7 +43,8 @@ block content
                     option(value='1') Categoria...
                     option(value='2') Yoga
                     option(value='3') Ayurveda
-                    option(value='4') Yoga y Ayurveda
+                    option(value='4') Tantra
+                    option(value='5') Trinidad
                   .col-md-1
                       span.input-group-btn
                         button.btn.btn-warning.search(type='button').i.glyphicon.glyphicon-search
@@ -59,7 +61,8 @@ block content
                     option(value='1') Categoria...
                     option(value='2') Yoga
                     option(value='3') Ayurveda
-                    option(value='4') Yoga y Ayurveda
+                    option(value='4') Tantra
+                    option(value='5') Trinidad
                   .col-md-1
                       span.input-group-btn
                         button.btn.btn-warning.search(type='button').i.glyphicon.glyphicon-search
@@ -76,7 +79,8 @@ block content
                     option(value='1') Categoria...
                     option(value='2') Yoga
                     option(value='3') Ayurveda
-                    option(value='4') Yoga y Ayurveda
+                    option(value='4') Tantra
+                    option(value='5') Trinidad
                   .col-md-1
                       span.input-group-btn
                         button.btn.btn-warning.search(type='button').i.glyphicon.glyphicon-search
@@ -91,10 +95,11 @@ block content
                   label.label-taller(for='sel1') Selecciona una categoria:
                     i.glyphicon.glyphicon-hand-down(width='70px') 
                     select#sel1.form-control.form-personal.select-taller.col-md-1
-                      option Categoria...
-                      option Yoga
-                      option Ayurveda
-                      option Yoga y Ayurveda
+                      option(value='1') Categoria...
+                      option(value='2') Yoga
+                      option(value='3') Ayurveda
+                      option(value='4') Tantra
+                      option(value='5') Trinidad
                     .col-md-1
                       span.input-group-btn
                         button.btn.btn-warning.search(type='button').i.glyphicon.glyphicon-search 
