--- a/public/sass/_maps.sass
+++ b/public/sass/_maps.sass
@@ -6,7 +6,12 @@
   opacity: 0.8
   float: right
   
-
+.map-events
+  position: fixed
+  margin-left: 100px
+  width: 90%
+  height: 100%
+  display: block
 
 #map
   height: 250px
