--- a/public/css/style.css
+++ b/public/css/style.css
@@ -483,6 +483,11 @@ body {
   border-color: #f8af00;
   box-shadow: inset 0 1px 1px rgba(255, 186, 18, 0.5), 0 0 6px rgba(255, 186, 18, 0.5); }
 
+.over {
+  width: 780px;
+  height: auto;
+  overflow: auto; }
+
 .tcalInput {
   background: url("/img/cal.gif") 100% 50% no-repeat;
   padding-right: 20px;
@@ -1215,6 +1220,13 @@ a.social-icon {
   box-shadow: 1px, 1px, 1px;
   opacity: 0.8;
   float: right; }
+
+.map-events {
+  position: fixed;
+  margin-left: 100px;
+  width: 90%;
+  height: 100%;
+  display: block; }
 
 #map {
   height: 250px;
