--- a/public/sass/_createEvent.sass
+++ b/public/sass/_createEvent.sass
@@ -3,3 +3,7 @@ body
 .form-control:focus 
   border-color: #f8af00
   box-shadow: inset 0 1px 1px rgba(255,186,18,0.5), 0 0 6px rgba(255,186,18,0.5)
+.over
+  width: 780px
+  height: auto
+  overflow: auto
