--- a/public/sass/_maps.sass
+++ b/public/sass/_maps.sass
@@ -8,10 +8,15 @@
   
 .map-events
   position: fixed
+  margin-top: -30px
   margin-left: 100px
-  width: 90%
+  width: 94%
   height: 100%
   display: block
+  
+  
+  
+  
 
 #map
   height: 250px
