--- a/views/myAcount.pug
+++ b/views/myAcount.pug
@@ -30,7 +30,7 @@ block content
               .col-sm-6.col-md-12
                 each retiro in retiros
                   .thumbnail.offer.margins.col-sm-6.col-md-3.retiro
-                    img(src='https://encuentraturetiro.com/wp-content/uploads/2016/12/Yoga-Meditation2.jpg', width='100%')
+                    img(src=retiro.imageUrl, width='100%')
                     .caption
                       div.container.size-mods
                           h2.text-center 
