--- a/public/sass/_carrussel.sass
+++ b/public/sass/_carrussel.sass
@@ -1,4 +1,18 @@
-
+.ino
+  margin-top: 24px
+  position: absolute
+  margin-left: -41px
+.in
+  margin-top: 24px
+  position: absolute
+  margin-left: 0px
+  border-bottom: 1px solid #f8af00
+  outline: 0px
+  border-top: 0px
+  border-left: 0px
+  border-right: 0px
+  width: 173px
+  font-size: 21px
 body
   padding-top: 20px
   font-family: Lobster Two
