--- a/views/add-event.pug
+++ b/views/add-event.pug
@@ -20,13 +20,14 @@ block content
  
   h1.font-categories.container Retiros
   .container.well
-      form.edit-retiro(action= action ? action : '/retiros', method= method ? method : 'POST')
+      form.edit-retiro(action= action ? action : '/retiros' method= method ? method : 'POST' enctype="multipart/form-data")
         .container
           .col-sm-8        
         .row
             br
             fieldset.form-group.col-sm-2
-              label Imagen   
+              label Imagen
+              input(type="file", name="image_item" id="image_item" )   
               .img-picker
             //- fieldset.form-group.col-sm-2
             //-           .img-picker
