--- a/views/fullEvent.pug
+++ b/views/fullEvent.pug
@@ -11,8 +11,8 @@ block content
         #article-photo-carousel.img-responsive.carousel.slide
           .img-responsive.carousel-inner.cont-slider
             .item.active
-            img.img-top.img-responsive(alt='', title='Retiro', src='/img/image.gif' height="600px" width="800px")
-
+            img(src= retiros.imageUrl, width="100%" height="100%" class="image1")
+          |#{retiros.imageUrl}
            
       .col-md-5
         .panel.panel-yellow
@@ -80,8 +80,8 @@ block content
           .panel-body.my-panel.social.bottom-map
             span.text-center.c
             #map
-            input#long(name="long", hidden,  value=  parseFloat(retiros.long) )
-            input#lat(name="lat",hidden,  value= parseFloat(retiros.lat) )
+            input#long(name="long",,  value=  parseFloat(retiros.long) )
+            input#lat(name="lat",,  value= parseFloat(retiros.lat) )
            
     .col-md-5.panel-five
       .panel-bottom
