restructuring map page allretiros

--- a/public/sass/_detailEvent.sass
+++ b/public/sass/_detailEvent.sass
@@ -19,6 +19,10 @@
 
 .image1
   max-width: 831px  !important
+  border-radius: 6px 6px 0 0
+.image2
+  width: 300px
+  height: 300px
 
   img
     border: 2px solid #FFFFFF
@@ -179,3 +183,5 @@ hr
   max-width: 561px
 .bottom-map
   height: 280px
+.events-link
+  padding: 0px
