--- a/public/sass/_register-login.sass
+++ b/public/sass/_register-login.sass
@@ -27,10 +27,12 @@ label
   font-weight: 300
 
 .panel-login
-  border: none
-  -webkit-box-shadow: 0px 0px 49px 14px rgba(188, 190, 194, 0.39)
-  -moz-box-shadow: 0px 0px 49px 14px rgba(188, 190, 194, 0.39)
-  box-shadow: 0px 0px 49px 14px rgba(188, 190, 194, 0.39)
+  
+#login
+  margin-top: -18px
+  margin-right: 264px
+#register
+  margin-left: -227px
   .checkbox
     input[type=checkbox]
       margin-left: 0px
