--- a/public/sass/register-login.sass
+++ b/public/sass/register-login.sass
@@ -14,6 +14,9 @@ body
   -webkit-animation: HeroBG 20s ease infinite
           animation: HeroBG 20s ease infinite
 
+a
+  color: red !important
+  text-align: center
 
 @-webkit-keyframes HeroBG
   0%
