--- a/views/layout.pug
+++ b/views/layout.pug
@@ -31,10 +31,10 @@ nav.navbar.navbar-default.navbar-fixed-top.header-mine
           a(href='javascript:agregar()')
             i.glyphicon.glyphicon-heart-empty
             |  Mis favoritos
-        //- li
-        //-   a(href='Register-login.html')
-        //-     i.glyphicon.glyphicon-log-in
-        //-     |  loggin
+        li
+          a(href='/login')
+            i.glyphicon.glyphicon-log-in
+            |  loggin
   nav.navbar.navbar-default
     .container
       a(href='/')
