--- a/views/Allretiros.pug
+++ b/views/Allretiros.pug
@@ -3,11 +3,11 @@ block content
   
     .container 
       img(src='/img/search.png', width='26px', height='26px').ino 
-      input#search( type="text" placeholder="indica el lugar").in   
+      input#search.intros( type="text" placeholder="indica el lugar")  
       h1#title-mine.text-center
     .hr-line
       div.map-events
-        #maps
+        div#maps
     div.over
       each retiro in retiros
         
