--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,7 +4,7 @@
   position: absolute;
   margin-left: -41px; }
 
-.in {
+.intros {
   margin-top: 24px;
   position: absolute;
   margin-left: 0px;
@@ -1254,7 +1254,7 @@ a.social-icon {
     display: block; }
 
 #maps {
-  height: 550px;
+  height: 100%;
   width: 50%;
   border: 1px solid #f8af00;
   box-shadow: 1px, 1px, 1px;
@@ -1266,7 +1266,7 @@ a.social-icon {
   margin-top: 4px;
   margin-left: 16px;
   width: 99%;
-  height: 100%;
+  height: 60%;
   display: block; }
 
 #map {
