--- a/public/sass/_carrussel.sass
+++ b/public/sass/_carrussel.sass
@@ -2,7 +2,7 @@
   margin-top: 24px
   position: absolute
   margin-left: -41px
-.in
+.intros
   margin-top: 24px
   position: absolute
   margin-left: 0px
@@ -30,6 +30,7 @@ body
   margin-left: -13px !important
   border-radius: 2px !important
   border: 1px solid #f8af00 !important
+
 .carousel.slide
   margin-top: 159px
 .font-retiro
