--- a/views/Allretiros.pug
+++ b/views/Allretiros.pug
@@ -34,8 +34,8 @@ block content
             hr
               
             div.iter
-              div#lat(hidden) #{retiro.lat}
-              div#long(hidden) #{retiro.long}
+              div#lat() #{retiro.lat}
+              div#long() #{retiro.long}
             img(src='https://maxcdn.icons8.com/Android_L/PNG/24/Ecommerce/price_tag-24.png', title='Price Tag', width='24')
             |   #{retiro.tags} 
 
