--- a/views/login-register.pug
+++ b/views/login-register.pug
@@ -13,7 +13,7 @@ block content
 					.panel-body
 						.row
 							.col-lg-12
-								form#login-form(action='/myAcount', method='post', role='form', style='display: block;')
+								form#login-form(action='/acount', method='post', role='form', style='display: block;')
 									h2.font-categories LOGIN
 									.form-group
 										input#username.form-control(type='text', name='username', tabindex='1', placeholder='Username', value='')
@@ -33,8 +33,7 @@ block content
 										input#email.form-control(type='email', name='email', tabindex='1', placeholder='Email Address', value='')
 									.form-group
 										input#password.form-control(type='password', name='password', tabindex='2', placeholder='Password')
-									.form-group
-										input#confirm-password.form-control(type='password', name='confirm-password', tabindex='2', placeholder='Confirm Password')
+									
 									.form-group
 										.row
 											.col-sm-6.col-sm-offset-3
