--- a/views/login-register.pug
+++ b/views/login-register.pug
@@ -23,7 +23,7 @@ block content
 										input#checkbox1(type='checkbox', name='remember')
 										label(for='checkbox1') Recordar contraseña
 									.col-xs-6.form-group.pull-right
-										a(href='myAcount')
+										a(href='/acount')
 											input#login-submit.form-control.btn.btn-login.font-categories(type='submit', name='login-submit', value='Log In')
 
 
