--- a/public/sass/_register-login.sass
+++ b/public/sass/_register-login.sass
@@ -19,7 +19,10 @@
   100%
     background-position: 0 0
 
-
+div.panel-body
+  padding-left: 50px
+  padding-right: 50px
+  border-radius: 15px
 .panel
   border-radius: 5px
 
@@ -27,6 +30,7 @@ label
   font-weight: 300
 
 .panel-login
+ 
   
 #login
   margin-top: -18px
