--- a/public/css/style.css
+++ b/public/css/style.css
@@ -339,6 +339,11 @@ p a {
     background-position: 100% 0; }
   100% {
     background-position: 0 0; } }
+div.panel-body {
+  padding-left: 50px;
+  padding-right: 50px;
+  border-radius: 15px; }
+
 .panel {
   border-radius: 5px; }
 
