--- a/views/layout.pug
+++ b/views/layout.pug
@@ -54,7 +54,7 @@ nav.navbar.navbar-default.navbar-fixed-top.header-mine
         //- li
         //-   a(href='about.html')  Blog
         li
-          a(href='/acount')  Anúnciate gratis
+          a(href='/login')  Anúnciate gratis
 
  
 
