session in progress |:

--- a/views/myAcount.pug
+++ b/views/myAcount.pug
@@ -66,7 +66,7 @@ block content
                           button.close(type='button', data-dismiss='modal', aria-hidden='true') &times;
                           h1
                             i.i-modal.glyphicon.glyphicon-thumbs-up
-                            |  Quieres compartir: #{retiro.title[index]} 
+                            |  Quieres compartir: #{retiro.title} 
                         .modal-body
                           .containear.margins-modal
                             br
