--- a/public/sass/_detailEvent.sass
+++ b/public/sass/_detailEvent.sass
@@ -49,6 +49,9 @@
   margin-left: auto
   margin-top: -100px
  
+.thumbnail
+  margin-top: 20px
+  margin-bottom: 20px
 .panel.panel-yellow
   border-radius: 3px
   box-shadow: 0px 0px 10px #888
@@ -186,3 +189,4 @@ hr
   height: 280px
 .events-link
   padding: 0px
+  margin-top: 20px
