--- a/public/sass/_maps.sass
+++ b/public/sass/_maps.sass
@@ -1,15 +1,18 @@
 #maps
+  position: fixed !important
   height: 100%
   width: 50%
   border: 1px solid #f8af00
   box-shadow: 1px, 1px, 1px
   opacity: 10
   float: right
+  margin-top: -92px
+  clear: both
 
  
   
 .map-events
-  position: fixed
+ 
   margin-top: 4px
   margin-left: 16px
   width: 99%
