--- a/views/layout.pug
+++ b/views/layout.pug
@@ -38,11 +38,11 @@ nav.navbar.navbar-default.navbar-fixed-top.header-mine
   nav.navbar.navbar-default
     .container
       a(href='/')
-        img.logo(src='/img/only_logo.png', width='150px', height='90px')
+        img.logo(src='/img/only_logo.png', width='140px', height='80px')
         .welcome.text-center
       .font-categories.logo.title-mine
 
-        h2 "Encuentra tu camino"
+        h2.title-find "Encuentra tu camino"
       ul.top-menu
         li
           a(href='about.html')
