--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,12 +2,12 @@
 .ino {
   margin-top: 24px;
   position: absolute;
-  margin-left: -41px; }
+  margin-left: -4px; }
 
 .intros {
   margin-top: 24px;
   position: absolute;
-  margin-left: 0px;
+  margin-left: 25px;
   border-bottom: 1px solid #f8af00;
   outline: 0px;
   border-top: 0px;
@@ -30,6 +30,11 @@ body {
   #myCarousel .nav {
     display: inline-block;
     background: #eee; }
+
+.title-find {
+  display: flex;
+  margin: auto;
+  margin-bottom: 21px; }
 
 .search {
   margin-left: -13px !important;
@@ -69,7 +74,7 @@ body {
 
 .logo {
   float: left;
-  margin: 10px; }
+  margin-top: 5px; }
 
 .title-mine {
   margin-top: 40px; }
@@ -143,12 +148,19 @@ div.form-group.label-taller {
 
 .hr-line {
   margin-bottom: 30px;
+  margin-top: -30px !important;
+  width: 100%;
+  height: 4px;
+  background-color: #f8af00; }
+
+.hr-line2 {
+  margin-bottom: 30px;
   width: 100%;
   height: 4px;
   background-color: #f8af00; }
 
 #welcome-top {
-  margin-top: 20px; }
+  margin-top: 10px; }
 
 .welcome {
   font-size: 40px;
@@ -259,11 +271,13 @@ div.form-group.label-taller {
 
 .footer {
   color: white;
-  margin-top: 20px;
+  margin: auto 0px;
   padding: 10px;
   width: 100%;
   height: 100px;
-  background-color: #1d1d1b; }
+  background-color: #1d1d1b;
+  bottom: 0;
+  position: absolute; }
   .footer a {
     text-decoration: none !important;
     color: white; }
@@ -798,6 +812,10 @@ i {
   margin-left: auto;
   margin-top: -100px; }
 
+.thumbnail {
+  margin-top: 20px;
+  margin-bottom: 20px; }
+
 .panel.panel-yellow {
   border-radius: 3px;
   box-shadow: 0px 0px 10px #888;
@@ -936,7 +954,8 @@ hr {
   height: 280px; }
 
 .events-link {
-  padding: 0px; }
+  padding: 0px;
+  margin-top: 20px; }
 
 .social-cont {
   border-style: solid;
@@ -1259,15 +1278,17 @@ a.social-icon {
     display: block; }
 
 #maps {
+  position: fixed !important;
   height: 100%;
   width: 50%;
   border: 1px solid #f8af00;
   box-shadow: 1px, 1px, 1px;
   opacity: 10;
-  float: right; }
+  float: right;
+  margin-top: -92px;
+  clear: both; }
 
 .map-events {
-  position: fixed;
   margin-top: 4px;
   margin-left: 16px;
   width: 99%;
