--- a/public/sass/_carrussel.sass
+++ b/public/sass/_carrussel.sass
@@ -288,7 +288,7 @@ div.form-group.label-taller
   height: 100px
   background-color: #1d1d1b
   bottom: 0
-  position: absolute
+  position: fixed
 
 
 
