--- a/views/myAcount.pug
+++ b/views/myAcount.pug
@@ -10,11 +10,11 @@ block content
       ul.top-menu
         li
           a(href='/acount')  Mis anuncios en encuentra tu camino
-          if user
-            h3 HOLA #{user.username} !
+      if user
+        h3 HOLA #{user.username} !
      
-          else
-            h3 You are NOT logged!
+      else
+        h3 You are NOT logged!
         //- li
         //-   a(href='about.html')  Datos del perfil
   .container.demo.size-font-categories
@@ -28,7 +28,7 @@ block content
         #collapseOne.panel-collapse.collapse(role='tabpanel', aria-labelledby='headingOne')
           .panel-body
             aside.text-right
-              a(href='/retiros/add')
+              a(href='/acount/empty')
                 i.glyphicon.glyphicon-plus-sign
                 |  Crear anuncio
             .row.cont-body
@@ -145,6 +145,31 @@ block content
               a(href='/retiros/add')
                 i.glyphicon.glyphicon-plus-sign
                 |  Crear anuncio
+      .panel.panel-default
+        #headingFour.panel-heading(role='tab')
+          h4.panel-title
+            a.collapsed(role='button', data-toggle='collapse', data-parent='#accordion', href='#collapseFour', aria-expanded='false', aria-controls='collapseFour')
+              i.more-less.glyphicon.glyphicon-plus
+              |  Conferencias
+        #collapseFour.panel-collapse.collapse(role='tabpanel', aria-labelledby='headingFour')
+          .panel-body
+            aside.text-right
+              a(href='/retiros/add')
+                i.glyphicon.glyphicon-plus-sign
+                |  Crear anuncio 
+
+      .panel.panel-default
+        #headingFive.panel-heading(role='tab')
+          h4.panel-title
+            a.collapsed(role='button', data-toggle='collapse', data-parent='#accordion', href='#collapseFive', aria-expanded='false', aria-controls='collapseFive')
+              i.more-less.glyphicon.glyphicon-plus
+              |  Maestros espirituales
+        #collapseFive.panel-collapse.collapse(role='tabpanel', aria-labelledby='headingFive')
+          .panel-body
+            aside.text-right
+              a(href='/retiros/add')
+                i.glyphicon.glyphicon-plus-sign
+                |  Crear anuncio 
               .container
    
   
