solution insert users

--- a/views/myAcount.pug
+++ b/views/myAcount.pug
@@ -22,7 +22,7 @@ block content
       .panel.panel-default
         #headingOne.panel-heading(role='tab')
           h2.panel-title
-            a(role='button', data-toggle='collapse', data-parent='#accordion', href='#collapseOne', aria-expanded='false', aria-controls='collapseOne')
+            a(role='button', data-toggle='collapse', data-parent='#accordion', href='#collapseOne', aria-expanded='true', aria-controls='collapseOne')
               i.more-less.glyphicon.glyphicon-plus
               |  Retiros
         #collapseOne.panel-collapse.collapse(role='tabpanel', aria-labelledby='headingOne')
