--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,11 +1,11 @@
 @charset "UTF-8";
 .ino {
-  margin-top: 24px;
+  margin-top: auto;
   position: absolute;
   margin-left: -4px; }
 
 .intros {
-  margin-top: 24px;
+  margin-top: auto;
   position: absolute;
   margin-left: 25px;
   border-bottom: 1px solid #f8af00;
@@ -67,6 +67,9 @@ body {
   background-color: #f8af00; }
 .nav-pills > li[data-slide-to="4"].active a {
   background-color: #f8af00; }
+
+#title-mine {
+  margin-top: auto; }
 
 .label-taller {
   font-size: 25px;
@@ -154,7 +157,7 @@ div.form-group.label-taller {
   background-color: #f8af00; }
 
 .hr-line2 {
-  margin-bottom: 30px;
+  margin-bottom: 10px;
   width: 100%;
   height: 4px;
   background-color: #f8af00; }
@@ -162,7 +165,16 @@ div.form-group.label-taller {
 #welcome-top {
   margin-top: 10px; }
 
+.welcome-top {
+  margin: 25px; }
+
+.welcome-top-acount {
+  margin-top: 65px;
+  font-size: 40px;
+  color: #062f4a; }
+
 .welcome {
+  margin-top: -35px;
   font-size: 40px;
   color: #062f4a; }
   .welcome span {
@@ -272,9 +284,10 @@ div.form-group.label-taller {
 .footer {
   color: white;
   margin: auto 0px;
-  padding: 10px;
+  padding: 0px;
+  padding-left: 30px;
   width: 100%;
-  height: 100px;
+  height: 60px;
   background-color: #1d1d1b;
   bottom: 0;
   position: fixed; }
@@ -958,7 +971,7 @@ hr {
 
 .events-link {
   padding: 0px;
-  margin-top: 20px; }
+  margin-top: 0px; }
 
 .social-cont {
   border-style: solid;
@@ -1290,7 +1303,7 @@ a.social-icon {
   float: right;
   margin-top: -92px;
   clear: both;
-  z-index: 1; }
+  z-index: 0; }
 
 .map-events {
   margin-top: 4px;
