--- a/public/sass/_carrussel.sass
+++ b/public/sass/_carrussel.sass
@@ -1,9 +1,9 @@
 .ino
-  margin-top: 24px
+  margin-top: auto
   position: absolute
   margin-left: -4px
 .intros
-  margin-top: 24px
+  margin-top: auto
   position: absolute
   margin-left: 25px
   border-bottom: 1px solid #f8af00
@@ -58,6 +58,8 @@ body
   &[data-slide-to="4"].active a
     background-color: #f8af00//#c8b783
 
+#title-mine
+  margin-top: auto
 .label-taller
   font-size: 25px
   top: -50px
@@ -141,7 +143,7 @@ div.form-group.label-taller
   background-color: #f8af00
 
 .hr-line2
-  margin-bottom: 30px
+  margin-bottom: 10px
   width: 100%
   height: 4px
   background-color: #f8af00
@@ -149,8 +151,15 @@ div.form-group.label-taller
 
 #welcome-top
   margin-top: 10px
+.welcome-top
+  margin: 25px
+.welcome-top-acount
+  margin-top: 65px
+  font-size: 40px
+  color: #062f4a
 
 .welcome
+  margin-top: -35px
   font-size: 40px
   color: #062f4a
   span
@@ -283,9 +292,10 @@ div.form-group.label-taller
     color: #f8af00
   color: white
   margin: auto 0px
-  padding: 10px
+  padding: 0px
+  padding-left: 30px
   width: 100%
-  height: 100px
+  height: 60px
   background-color: #1d1d1b
   bottom: 0
   position: fixed
