--- a/views/myAcount.pug
+++ b/views/myAcount.pug
@@ -2,7 +2,7 @@ extends layout
 
 block content
   .welcome.text-center.container
-    p.welcome-top
+    p.welcome-top-acount
      | Mi cuenta
     .hr-line
   nav.navbar.navbar-default.navbar-count
