--- a/views/layout.pug
+++ b/views/layout.pug
@@ -41,23 +41,24 @@ nav.navbar.navbar-default.navbar-fixed-top.header-mine
             i.glyphicon.glyphicon-log-in
             |  loggin
   nav.navbar.navbar-default
-    .container
+    .container.center-logo
       a(href='/')
         img.logo(src='/img/only_logo.png', width='140px', height='80px')
         .welcome.text-center
       .font-categories.logo.title-mine
-
-        h2.title-find "Encuentra tu camino"
+        .row
+          .col-xs-12.col-md-12
+            h2.title-find "Encuentra tu camino"
       ul.top-menu
         li
           a(href='about.html')
-          //- | Encuentra 
-          //- small
-          //-   i.glyphicon.glyphicon-menu-down
-        //- li
-        //-   a(href='about.html')  Conóncenos
-        //- li
-        //-   a(href='about.html')  Blog
+            //- | Encuentra 
+            //- small
+            //-   i.glyphicon.glyphicon-menu-down
+          //- li
+          //-   a(href='about.html')  Conóncenos
+          //- li
+          //-   a(href='about.html')  Blog
         li
           a(href='/login')  Anúnciate gratis
 
