--- a/views/layout.pug
+++ b/views/layout.pug
@@ -50,8 +50,8 @@ nav.navbar.navbar-default.navbar-fixed-top.header-mine
           .col-xs-12.col-md-12
             h2.title-find "Encuentra tu camino"
       ul.top-menu
-        li
-          a(href='about.html')
+        //-li
+          //-a(href='about.html')
             //- | Encuentra 
             //- small
             //-   i.glyphicon.glyphicon-menu-down
@@ -61,7 +61,7 @@ nav.navbar.navbar-default.navbar-fixed-top.header-mine
           //-   a(href='about.html')  Blog
         li
           if user
-            a(href='/myAcount')
+            a(href='/acount')
               i.glyphicon.glyphicon-user
               |  Mi Cuenta
           else
