--- a/public/css/style.css
+++ b/public/css/style.css
@@ -371,6 +371,12 @@ div.panel-body {
 label {
   font-weight: 300; }
 
+form input:invalid {
+  border: 2px solid red; }
+
+form input:required {
+  border: 2px solid red; }
+
 #login {
   margin-top: -18px;
   margin-right: 264px; }
