--- a/public/sass/_register-login.sass
+++ b/public/sass/_register-login.sass
@@ -31,6 +31,10 @@ label
 
 .panel-login
  
+form input:invalid
+  border: 2px solid red
+form input:required 
+  border: 2px solid red
   
 #login
   margin-top: -18px
