--- a/views/home.pug
+++ b/views/home.pug
@@ -21,7 +21,7 @@ block content
                   p.text-center.font-categories.size-title-categories Retiros
                   .col-xs-12  
                     form(action='/', method='POST')
-                      label.label-taller(for='sel1') Selecciona una categoria:
+                      label.label-taller(for='sel1') Selecciona una categoria&nbsp; 
                       i.glyphicon.glyphicon-hand-down(width='120px')
                       select#sel1.form-control.form-personal.select-taller.col-md-1
                         option(value='1') Categoria...
@@ -39,7 +39,7 @@ block content
                 .form-group.label-taller.font-retiro
                   p.text-center.font-categories.size-title-categories Formaciones
                   form(action='/', method='POST')
-                    label.label-taller.size-categories(for='sel1') Selecciona una categoria:
+                    label.label-taller.size-categories(for='sel1') Selecciona una categoria&nbsp;
                     i.glyphicon.glyphicon-hand-down(width='70px')
                     select#sel1.form-control.form-personal.select-taller.col-md-1
                       option(value='1') Categoria...
@@ -57,7 +57,7 @@ block content
                 .form-group.label-taller.font-retiro
                   p.text-center.font-categories.size-title-categories Talleres
                   form(action='/', method='POST')
-                    label.label-taller(for='sel1') Selecciona una categoria:
+                    label.label-taller(for='sel1') Selecciona una categoria&nbsp;
                     i.glyphicon.glyphicon-hand-down(width='70px')
                     select#sel1.form-control.form-personal.select-taller.col-md-1
                       option(value='1') Categoria...
@@ -75,7 +75,7 @@ block content
                 .form-group.label-taller.font-retiro
                   p.text-center.font-categories.size-title-categories Conferencias
                   form(action='/', method='POST')
-                    label.label-taller(for='sel1') Selecciona una categoria:
+                    label.label-taller(for='sel1') Selecciona una categoria&nbsp;
                     i.glyphicon.glyphicon-hand-down(width='70px')
                     select#sel1.form-control.form-personal.select-taller.col-md-1
                       option(value='1') Categoria...
@@ -94,7 +94,7 @@ block content
                 .form-group.label-taller.font-retiro
                   p.text-center.font-categories.size-title-categories Maestros espirituales
                   form(action='/', method='POST')
-                    label.label-taller(for='sel1') Selecciona una categoria:
+                    label.label-taller(for='sel1') Selecciona una categoria&nbsp;
                       i.glyphicon.glyphicon-hand-down(width='70px') 
                       select#sel1.form-control.form-personal.select-taller.col-md-1
                         option(value='1') Categoria...
