--- a/public/css/style.css
+++ b/public/css/style.css
@@ -651,12 +651,10 @@ body {
     padding: 15px;
     text-decoration: none; }
 
-i {
-  font-size: 12px !important; }
-
 .more-less {
   float: right;
-  color: #212121; }
+  color: #212121;
+  font-size: 12px; }
 
 .panel-default > .panel-heading + .panel-collapse > .panel-body {
   border-top-color: #EEEEEE; }
