--- a/public/sass/_accurdion.sass
+++ b/public/sass/_accurdion.sass
@@ -18,12 +18,11 @@
     display: block
     padding: 15px
     text-decoration: none
-i
-  font-size: 12px !important
+
 .more-less
   float: right
   color: #212121
-
+  font-size: 12px
 .panel-default > .panel-heading + .panel-collapse > .panel-body
   border-top-color: #EEEEEE
 
