--- a/views/layout.pug
+++ b/views/layout.pug
@@ -39,7 +39,7 @@ nav.navbar.navbar-default.navbar-fixed-top.header-mine
           else
             a(href='/login')
               i.glyphicon.glyphicon-log-in
-              |  loggin
+              |  login
   nav.navbar.navbar-default
     .container.center-logo
       a(href='/')
@@ -66,9 +66,6 @@ nav.navbar.navbar-default.navbar-fixed-top.header-mine
               |  Mi Cuenta
           else
             a(href='/login')  Anúnciate gratis
-
- 
-
 
 include includes/footer.pug
   block content
